# rust-model-definition-parser

./: .gitignore  Cargo.toml  Makefile  README.md
demo/source/: demo-model.txt
src/: cli.rs  lib.rs  main.rs  parser.rs  typescript.rs
