[package]
name = "rust-model-definition-parser"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
regex = "1.10.5"

[lib]
name = "model_definition_parser"
path = "src/lib.rs"

[[bin]]
name = "mdparser"
path = "src/main.rs"
