[package]
name = "rust-model-definition-parser"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
regex = "1.10.5"
tokio = { version = "1.39.1", features = ["full"] }
serde = "1.0.188"
futures = "0.3.30"
mongodb = "3.0.1"
serde_json = "1.0.120"


[lib]
name = "model_definition_parser"
path = "src/lib.rs"

[[bin]]
name = "mdparser"
path = "src/main.rs"
